<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/playerOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="Player One"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerOneScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="@id/playerOne"
        app:layout_constraintTop_toBottomOf="@id/playerOne" />


    <TextView
        android:id="@+id/playerTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:text="Player Two"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/playerTwoScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="35dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintRight_toRightOf="@id/playerTwo"
        app:layout_constraintTop_toBottomOf="@id/playerTwo" />

    <TextView
        android:id="@+id/playerStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Player one is winning!"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerOneScore" />

    <Button
        android:id="@+id/btn_0"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:contentDescription="buttonzero"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playerStatus" />

    <Button
        android:id="@+id/btn_1"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn_0"
        app:layout_constraintTop_toTopOf="@id/btn_0" />

    <Button
        android:id="@+id/btn_2"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:contentDescription="loginButton"
        app:layout_constraintLeft_toRightOf="@id/btn_1"
        app:layout_constraintTop_toTopOf="@id/btn_1" />

    <Button
        android:id="@+id/btn_3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="1sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/btn_0"
        app:layout_constraintTop_toBottomOf="@id/btn_0" />

    <Button
        android:id="@+id/btn_4"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn_3"
        app:layout_constraintTop_toTopOf="@id/btn_3" />

    <Button
        android:id="@+id/btn_5"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn_4"
        app:layout_constraintTop_toTopOf="@id/btn_4" />

    <Button
        android:id="@+id/btn_6"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="0sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/btn_3"
        app:layout_constraintTop_toBottomOf="@id/btn_3" />

    <Button
        android:id="@+id/btn_7"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn_6"
        app:layout_constraintTop_toTopOf="@id/btn_6" />

    <Button
        android:id="@+id/btn_8"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="3sp"
        android:backgroundTint="#413F43"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn_7"
        app:layout_constraintTop_toTopOf="@id/btn_7" />

    <Button
        android:id="@+id/resetGame"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:backgroundTint="#E1470D"
        android:text="Reset Game"
        android:contentDescription="reset"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_6" />

</androidx.constraintlayout.widget.ConstraintLayout>